--- a/src/views/staff/editStaff.hbs
+++ b/src/views/staff/editStaff.hbs
@@ -9,8 +9,7 @@
         <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{staff._id}}"
-            enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{staff._id}}" onsubmit="return validateProfileStaff();">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;"
                     src="data:image/{{staff.image.contentType}};base64,{{convertImage staff.image.data}}" alt=""
@@ -29,12 +28,12 @@
                 </span>
                 <span style="display: block;">{{user.email}}</span>
                 <input type="hidden" class="form-control" id="email" name="email" value="{{user.email}}">
-
             </div>
             <div class="col-12">
-                <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{staff.name}}" required
-                    placeholder="Your full name...">
+                <label for="name" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="name" name="name" value="{{staff.name}}" 
+                    minlength="5", maxlength="30" required placeholder="Your full name...">
+                    <span class="msg" id="name-msg"></span>
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -42,8 +41,9 @@
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required
-                    placeholder="Your address...">{{staff.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" 
+                    minlength="6", maxlength="100" required placeholder="Your address...">{{staff.address}}</textarea>
+                    <span class="msg" id="address-msg"></span>
             </div>
             <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
