--- a/src/views/trainee/edit.hbs
+++ b/src/views/trainee/edit.hbs
@@ -9,8 +9,7 @@
         <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainee._id}}"
-            enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainee._id}}" onsubmit="return validateProfileTrainee();">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;"
                     src="data:image/{{trainee.image.contentType}};base64,{{convertImage trainee.image.data}}" alt=""
@@ -31,14 +30,16 @@
                 <input type="hidden" class="form-control" id="email" name="email" value="{{user.email}}">
             </div>
             <div class="col-12">
-                <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{trainee.name}}" required
-                    placeholder="Your full name...">
+                <label for="name" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="name" name="name" value="{{trainee.name}}" 
+                    minlength="5", maxlength="30" required placeholder="Your full name...">
+                    <span class="msg" id="name-msg"></span>
             </div>
             <div class="col-12">
                 <label for="code" class="form-label">Code</label>
-                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" required
-                    placeholder="Your code...">
+                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" 
+                    minlength="4", maxlength="20" required placeholder="Your code...">
+                    <span class="msg" id="code-msg"></span>
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -46,14 +47,16 @@
                     required>
             </div>
             <div class="col-12">
-                <label for="edu" class="form-label">Education</label>
-                <input type="text" class="form-control" id="edu" name="education"
-                    value="{{convertDate trainee.education}}" required>
+                <label for="education" class="form-label">Education</label>
+                <input type="text" class="form-control" id="education" name="education" value="{{trainee.education}}"
+                    minlength="2", maxlength="20" required>
+                    <span class="msg" id="education-msg"></span>
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required
-                    placeholder="Your address...">{{trainee.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" 
+                    minlength="6", maxlength="100" required placeholder="Your address...">{{trainee.address}}</textarea>
+                    <span class="msg" id="address-msg"></span>
             </div>
             <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
