--- a/src/views/trainer/edit.hbs
+++ b/src/views/trainer/edit.hbs
@@ -9,8 +9,7 @@
         <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainer._id}}"
-            enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainer._id}}" onsubmit="return validateProfileTrainer();">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;"
                     src="data:image/{{trainer.image.contentType}};base64,{{convertImage trainer.image.data}}" alt=""
@@ -31,14 +30,16 @@
 
             </div>
             <div class="col-12">
-                <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{trainer.name}}" required
-                    placeholder="Your full name...">
+                <label for="name" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="name" name="name" value="{{trainer.name}}" required
+                    minlength="5", maxlength="30" placeholder="Your full name...">
+                    <span class="msg" id="name-msg"></span>
             </div>
             <div class="col-12">
                 <label for="code" class="form-label">Code</label>
-                <input type="text" class="form-control" id="Code" name="code" value="{{trainer.code}}" required
-                    placeholder="Your code...">
+                <input type="text" class="form-control" id="code" name="code" value="{{trainer.code}}" required
+                    minlength="4", maxlength="20" placeholder="Your code...">
+                    <span class="msg" id="code-msg"></span>
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -46,14 +47,16 @@
                     required>
             </div>
             <div class="mb-3">
-                <label for="sp" class="form-label">Specialty</label>
-                <input class="form-control" id="sp" rows="3" name="specialty" value="{{trainer.specialty}}" required
-                    placeholder="Your Specialty...">
+                <label for="specialty" class="form-label">Specialty</label>
+                <input class="form-control" id="specialty" rows="3" name="specialty" value="{{trainer.specialty}}" required
+                    minlength="2", maxlength="20" placeholder="Your Specialty...">
+                    <span class="msg" id="specialty-msg"></span>
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
                 <textarea class="form-control" id="address" rows="3" name="address" required
-                    placeholder="Your address...">{{trainer.address}}</textarea>
+                    minlength="6", maxlength="100" placeholder="Your address...">{{trainer.address}}</textarea>
+                    <span class="msg" id="address-msg"></span>
             </div>
             <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
