--- a/src/views/trainee/edit.hbs
+++ b/src/views/trainee/edit.hbs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
-
 <body>
     {{> traineeLayout}}
 
@@ -9,11 +8,9 @@
         <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainee._id}}" onsubmit="return validateProfileTrainee();">
+        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainee._id}}" enctype="multipart/form-data">
             <div class="text-left">
-                <img style="width: 170px; height: 170px; margin-right: 20px;"
-                    src="data:image/{{trainee.image.contentType}};base64,{{convertImage trainee.image.data}}" alt=""
-                    class="img-thumbnail">
+                <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{trainee.image.contentType}};base64,{{convertImage trainee.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
                     <img style="width: 170px; height: 170px;" src="" class="img-thumbnail" id="chosenImage" alt="">
                     <i id="cancel-btn" class="bi bi-x-lg"></i>
@@ -22,43 +19,32 @@
             <div class="col-12 mt-4 mb-3">
                 <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
+
+            {{!-- <div class="col-12">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{trainee.email}}" required placeholder="Your email address...">
+            </div> --}}
             <div class="col-12">
-                <span style="display: block; color: rgb(44, 44, 44);">
-                    Email Address
-                </span>
-                <span style="display: block;">{{user.email}}</span>
-                <input type="hidden" class="form-control" id="email" name="email" value="{{user.email}}">
+                <label for="fullName" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{trainee.name}}" required placeholder="Your full name...">
             </div>
-            <div class="col-12">
-                <label for="name" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="name" name="name" value="{{trainee.name}}" 
-                    minlength="5", maxlength="30" required placeholder="Your full name...">
-                    <span class="msg" id="name-msg"></span>
-            </div>
-            <div class="col-12">
+            {{!-- <div class="col-12">
                 <label for="code" class="form-label">Code</label>
-                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" 
-                    minlength="4", maxlength="20" required placeholder="Your code...">
-                    <span class="msg" id="code-msg"></span>
-            </div>
+                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" required placeholder="Your code...">
+            </div> --}}
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
-                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate trainee.dob}}"
-                    required>
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate trainee.dob}}" required>
             </div>
             <div class="col-12">
-                <label for="education" class="form-label">Education</label>
-                <input type="text" class="form-control" id="education" name="education" value="{{trainee.education}}"
-                    minlength="2", maxlength="20" required>
-                    <span class="msg" id="education-msg"></span>
+                <label for="edu" class="form-label">Education</label>
+                <input type="text" class="form-control" id="edu" name="education" value="{{convertDate trainee.education}}" required>
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" 
-                    minlength="6", maxlength="100" required placeholder="Your address...">{{trainee.address}}</textarea>
-                    <span class="msg" id="address-msg"></span>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{trainee.address}}</textarea>
             </div>
-            <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
+                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
@@ -71,6 +57,6 @@
         previewImageAndClose();
     </script>
 
-    {{> frameworkCDN}}
+{{> frameworkCDN}}
 </body>
 </html>
