--- a/src/views/trainee/view-grade.hbs
+++ b/src/views/trainee/view-grade.hbs
@@ -10,7 +10,7 @@
         </a>
         <h3 class="fs-4 mt-5">Grade report for Trần Quốc Khánh (GCH190663)</h3>
         <div class="content-detail-header mt-4">
-        <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button>
+        {{!-- <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button> --}}
            <form action="/trainee/view-grade/search" class="content-detail-header-search" method="GET">
                 <input type="search" name="q" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
@@ -26,7 +26,7 @@
                     <th scope="col">Trainer</th>
                     <th scope="col">Class</th>
                     <th scope="col">Grade</th>
-                    <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span></th>
+                    {{!-- <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span></th> --}}
                 </tr>
             </thead>
             <tbody>
@@ -40,9 +40,9 @@
                     <td>{{this.grade}}</td>
                      <td>
                         <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">
-                            <a href="/trainee/view-grade/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
+                            {{!-- <a href="/trainee/view-grade/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
                                 <i class="bi bi-x-lg"></i><span class=" fs-6" style="margin-left: 5px;">Delete</span>
-                            </a>
+                            </a> --}}
 
                         </div>    
                     </td>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="form-group">
                     <label for="Name">Name</label>
-                    <input type="text" class="form-control" id="Name" name="Name" placeholder="Name..." required>
+                    <input type="text" class="form-control" id="Name" name="name" placeholder="Name..." required>
                 </div>
                 <div class="form-group">
                     <label for="courseTrainer">Trainer</label>
@@ -78,18 +78,18 @@
                     <label for="class">Class</label>
                     <input type ="text" class="form-control" id="class" name="class" placeholder="Class..." required>
                 </div>
-                {{!-- <div class="form-group">
+                <div class="form-group">
                     <label for="grade">Grade</label>
-                    <input type ="text" class="form-control" id="class" name="class" placeholder="Class..." required>
-                </div> --}}
-                <div class="col-md-4">
+                    <input type ="text" class="form-control" id="grade" name="grade" placeholder="Grade..." required>
+                </div>
+                {{!-- <div class="col-md-4">
                     <label for="inputGrade" class="form-label">Grade</label>
                     <select name="" id="inputGrade" class="form-select">
-                        <option value="{{id}}">P</option>
-                        <option value="{{id}}">M</option>
-                        <option value="{{id}}">D</option>
+                        <option value="">P</option>
+                        <option value="">M</option>
+                        <option value="">D</option>
                     </select>
-                </div>
+                </div> --}}
                 <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
             </form>
             <footer class="modal-action_form-footer">
