--- a/src/public/css/trainer/viewTrainee.css
+++ b/src/public/css/trainer/viewTrainee.css
@@ -2,35 +2,35 @@
     margin-top: 40px;
 }
 
-.trainer-status-pending {
+.status-pending {
     background-color: #9e9e9e;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.trainer-status-pass {
+.status-pass {
     background-color: #2eeb08;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.trainer-status-merit {
+.status-merit {
     background-color: #08ebc1;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.trainer-status-distinction {
+.status-distinction {
     background-color: #fa8e01;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.trainer-status-fail {
+.status-fail {
     background-color: rgb(250, 6, 6);
     color: #000;
     padding: 5px 20px;
@@ -41,18 +41,18 @@
     text-align: center;
 }
 
-.trainer-button-edit {
+.button-edit {
     background-color: aliceblue;
     border-radius: 12px;
     color: black;
     border: none;
 }
 
-.trainer-button-edit:hover {
+.button-edit:hover {
     background-color: rgb(148, 86, 4);
 }
 
-.trainer-button-delete {
+.button-delete {
     background-color: rgb(215, 217, 219);
     border-radius: 12px;
     color: black;
@@ -60,7 +60,7 @@
     outline: none;
 }
 
-.trainer-modal-title {
+.modal-title {
     text-transform: uppercase;
     letter-spacing: 1rem;
     text-align: center;
@@ -100,67 +100,67 @@
     letter-spacing: 0.3rem;
 }
 
-.trainer-form-update {
+.form-update {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
 }
 
-.trainer-form-edit-grade label {
+.form-edit-grade label {
     margin-bottom: 10px;
 }
 
-.trainer-grade-status {
+.grade-status {
     margin-top: 10px;
 }
 
-.trainer-course {
+.course {
     display: grid;
     grid-template-columns: 100px auto;
     gap: 0 40px;
 }
 
-.trainer-course .trainer-course-name {
+.course .course-name {
     text-align: center;
     gap: 0 40px;
 }
 
-.trainer-status {
-    display: grid;
-    grid-template-columns: 100px auto;
-    margin-top: 30px;
-    gap: 0 40px;
-}
-
-.trainer-status .trainer-status-desc {
-    text-align: center;
-}
-
-.trainer-grade {
+.status {
     display: grid;
     grid-template-columns: 100px auto;
     margin-top: 30px;
     gap: 0 40px;
 }
 
-.trainer-grade-input {
+.status .status-desc {
     text-align: center;
 }
 
-.trainer-btn-disable {
+.grade {
+    display: grid;
+    grid-template-columns: 100px auto;
+    margin-top: 30px;
+    gap: 0 40px;
+}
+
+.grade-input {
+    text-align: center;
+}
+
+.btn-disable {
     cursor: not-allowed;
     background-color: gray;
     pointer-events: none;
 }
 
-.trainer-btn-search {
+.btn-search {
     width: 90px;
     margin-left: 30px;
     background-color: #5AE8CE;
     border: none
 }
 
-.trainer-btn-search:hover {
+.btn-search:hover {
     background-color: #53bfab;
 }
 
