--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/app.css">
     <script type="text/javascript" src="/js/app.js"></script>
     <link rel="stylesheet" href="/css/trainer/main.css">
+    <link rel="stylesheet" href="/css/trainer/viewTrainee.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
