--- a/src/public/css/trainer/viewTrainee.css
+++ b/src/public/css/trainer/viewTrainee.css
@@ -60,7 +60,7 @@
     outline: none;
 }
 
-.modal-title {
+.trainer-modal-title {
     text-transform: uppercase;
     letter-spacing: 1rem;
     text-align: center;
